--- a/app/views/pages/ourfocus.html.erb
+++ b/app/views/pages/ourfocus.html.erb
@@ -64,7 +64,7 @@
       <br>
       <strong><h5>PARTNER WITH US</h5></strong>
       <p>
-        If you would like to partner with us, send us a note to <a>development@redsweaterproject.com</a>.
+        If you would like to partner with us, send us a note to <a href="mailto:development@redsweaterproject.com">development@redsweaterproject.com</a>.
       </p>
     </div>
   </div>
