--- a/app/views/pages/redsweater.html.erb
+++ b/app/views/pages/redsweater.html.erb
@@ -47,20 +47,20 @@
         <p>Help us to get kids into red sweaters, and off to school. Every dollar makes a difference.
         </p>
         <div class="dropdown">
-          <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          <!-- <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
             Choose your gift
             <span class="caret"></span>
-          </button>
+          </button> -->
           <div class="btns-wrapper">
-            <a href="#" class="btn btn-solid"><span>DONATE</span></a>
+            <%= link_to 'DONATE', new_charge_path, :class => "btn btn-solid" %>
           </div>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <!-- <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
             <li><a href="#">25</a></li>
             <li><a href="#">50</a></li>
             <li><a href="#">100</a></li>
             <li><a href="#">500</a></li>
             <li><a href="#">1000</a></li>
-          </ul>
+          </ul> -->
       </div>
     </div>
   </div>
