--- a/app/views/pages/theteam.html.erb
+++ b/app/views/pages/theteam.html.erb
@@ -636,12 +636,12 @@
   <div class="flex page-canvas">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>WHAT MAKES THE <br>SCHOOL UNIQUE?</h2>
+        <h2>WHY TANZANIA?</h2>
         <p>
           It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
         </p>
         <div class="btns-wrapper">
-          <a href="#" class="btn btn-secondary"><span>LEARN HOW IT ALL BEGAN</span></a>
+          <a href="/pages/ourstory" class="btn btn-secondary">LEARN HOW IT ALL BEGAN</a>
         </div>
       </div>
     </div>
