--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -3,7 +3,7 @@
   <div class="shadow-box">
     <div class="banner-content page-canvas">
       <STRONG><h3 class="white-text">BECAUSE OF RED SWEATER PROJECT:</h3></STRONG>
-      <h2>By 2020, the high school graduation rate in Mungere, Tanzania will increase by <span style="color:#fdbe16;">200%</span></h2>
+      <h2>An entire community of children is able to complete high school for the very first time.</h2>
     </div>
   </div>
 </div>
@@ -11,8 +11,8 @@
 <!-- Intro -->
 <div class="flex page-canvas">
 	<div class="flex-item-1col">
-	  <h2>HELPING KIDS GO TO SCHOOL</h2>
-		<p>Red Sweater Project creates high quality middle and high schools for kids in rural East Africa. Superman has his cape, and Zoro has his mask. For these kids, a school uniform is transformational. Putting on a red sweater means having the opportunity to learn and to better an entire community.</p>
+	  <!-- <h2>HELPING KIDS GO TO SCHOOL</h2> -->
+		<p>Red Sweater Project creates high quality middle and high schools for kids in rural East Africa. Superman has his cape and Zoro has his mask. For these kids, a school uniform is transformational. Putting on a red sweater means having the opportunity to learn and to better an entire community.</p>
 		<div class="btns-wrapper">
 			<a href="/pages/theschool" class="btn btn-solid"><span>Check out the school</span></a>
 		</div>
@@ -24,7 +24,7 @@
       <div class="flex page-canvas">
         <div class="flex-item-1col intro">
           <h2>A CLEAR FOCUS</h2>
-          <p>There are (XXXXX) high schools to educate over (XXXXX) students in Tanzania, with an average cost of US$500 per year--more than twice the average family's yearly income. A middle and high school education from a Red Sweater Project school is unique in 3 distinct ways:</p>
+          <p>With Africa's rapidly growing population of youth, there are not enough secondary schools to accommodate all children in countries like Tanzania. Attending these schools often costs USD $500, making them unaffordable for most families living in poverty. That's why Mungere Secondary School is so important to the community. A middle and high school education from Red Sweater Project is unique in three distinct ways.</p>
         </div>
       </div>
       <div class="page-canvas">
