--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -6,24 +6,27 @@
   </div>
 </div>
 
-<div class="flex page-canvas">
-  <div class="flex-item-1col">
-    <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
-    When completed, The Mungere Campus will serve over 300 students each year, with students in grades 6-12.
-    </p>
-    <h5><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></h5>
-    <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios (do we know a formal ratio?), teachers must rely on outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
-
-
-    <h5><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
-    <p>
-      While elementary school in Tanzania is free, middle and high school costs about USD$500 per year, making it highly cost prohibitive when the average family income is roughly US $530 per year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
-    </p>
-    <h5><strong>THE MUNGERE SCHOOL IS AFFORDABLE AND ACCESSIBLE</strong></h5>
-    <p>Families invest only US$15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them much-needed time to study.</p>
-
-    <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
-    <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
+<div class="flex page-canvas ">
+  <div class="flex-item-1col row">
+    <div class="col-sm-6 mt-4">
+      <p>The Mungere School is the first middle and high school available to kids in the rural community of Mungere, Tanzania. Every year more than 200 families apply for one of the 30-40 available spots in the incoming class.
+      When completed, The Mungere Campus will serve over 300 students each year, with students in grades 6-12.
+      </p>
+      <h5><strong>THE AVERAGE SCHOOL LACKS THE INFRASTRUCTURE TO EFFECTIVELY EDUCATE STUDENTS</strong></h5>
+      <p>In Tanzania, secondary schools have incredibly high student-to-teacher ratios, teachers must utilize outdated books and learning materials, and facilities are limited. All formal exams in Tanzania are given in English, but many private secondary schools still teach in Swahili, due to teacher shortages and lack of proficiency.</p>
+      <h5><strong>STILL THE AVERAGE FAMILY CAN'T AFFORD TO SEND THEIR KIDS TO SCHOOL</strong></h5>
+      <p>
+      While elementary school in Tanzania is free, middle and high school costs about USD$500 per year, making it highly cost prohibitive when the average family income is roughly US $530</p>
+    </div>
+    <div class="col-sm-6">
+     <p>per year. Even when families make great sacrifices to send a child to school, there is no guarantee of the quality of education. For students living in rural areas, attending middle or high school usually means traveling great distances daily, which can be both dangerous and exhausting.
+      </p>
+      <h5><strong>THE MUNGERE SCHOOL IS AFFORDABLE AND ACCESSIBLE</strong></h5>
+      <p>Families invest only US$15 per year total to cover their child's entire education. While their financial contribution doesn't cover all expenses, it pays for operating costs at the school, solidifying each family's commitment. The school is centrally located within the village, protecting students from the vulnerability of travel, and giving them much-needed time to study.</p>
+      <h5><strong>SOMETIMES IT REALLY DOES TAKE A VILLAGE</strong></h5>
+      <p>The Parent Action Committee as well as the local tribal government are actively involved with the school. Community meetings are held regularly to share ideas and solve problems in a cohesive partnership.</p>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -34,7 +37,7 @@
       <h5><strong>PREPARATION IS THE KEY TO SUCCESS. OUR STUDENTS WORK HARD FOR:</strong></h5>
       <br/>
       <ul><strong>A COMPETITIVE, HIGH QUALITY EDUCATION</strong>
-        <li>• Our teachers hold advanced degrees and lend local and cultural perspectives. Our teachers have come from from China, Ireland, the United States, Scotland, England, Mexico and Australia to donate their time and talents. All teachers have completed an ESL, CELTA or TESOL training. </li>
+        <li>• Our teachers hold advanced degrees and lend local and cultural perspectives. Our teachers have come from from China, Ireland, the United States, Tanzania, Scotland, England, Mexico and Australia to donate their time and talents. All teachers have completed an ESL, CELTA or TESOL training. </li>
         <li>• Mungere students consistently score in the top quarter of schools in the region and in the top 3 in the district (out of 23 schools) on government-issued tests.</li>
         <li>• The Tanzania Ministry of Education has recognized Red Sweater Project as a successful school model that gets positive results.
         </li>
@@ -76,7 +79,7 @@
   <div class="flex">
     <div class="flex-item-3col space-second">
       <div class="img-wrapper">
-        <%= image_tag("home_OurFocus_education.png", :class => "img-responsive")%>
+        <%= image_tag("focus_store.jpg", :class => "img-responsive")%>
       </div>
       <div class="focusCopy">
         <h5><strong>SMALL BUSINESS SKILLS</strong></h5>
