--- a/app/assets/stylesheets/sass/3-layouts/_media-queries-desktop.scss
+++ b/app/assets/stylesheets/sass/3-layouts/_media-queries-desktop.scss
@@ -103,6 +103,10 @@
     flex-wrap: wrap;
     justify-content: flex-start;
   }
+  // .shadow {
+  //   width: 50vw;
+  //
+  // }
 
   .flex-item-2col:nth-child(1){
     padding-left: 20px;
