--- a/app/assets/stylesheets/sass/3-layouts/_flex.sass
+++ b/app/assets/stylesheets/sass/3-layouts/_flex.sass
@@ -6,7 +6,7 @@
     justify-content: flex-start
   .center
     justify-content: center
-  @include outer-container
+  // @include outer-container
 
 .flex-item-1col
   // min-height: 300px
@@ -25,3 +25,10 @@
   img
     width: 100%
     height: auto
+
+.twocol-left-text
+  width: 480px
+  margin: 0 auto 0 0
+
+.page-canvas > .twocol-left-text
+  margin-left: 0
