--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -37,7 +37,7 @@
         <%= image_tag("#{student.image_file_name}", :class => "img-responsive img-rounded") %>
         <h5><strong><%= student.name %></strong></h5>
         <p><em><%= student.age %> year-old <%= student.gender %></em><br>
-        I want to become: A <%= student.dream %></p>
+        I want to become: <%= student.dream %></p>
         <br/>
         <%= link_to "Update #{student.name}", edit_student_path(student), remote: true %><br>
         <%= link_to "Delete", student_path(student), :data => {:confirm => "Are you sure you want to remove this student from the sponsorship page?", method: :delete}, remote: true, class: "red" %>
