--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -54,16 +54,17 @@
   </div>
 </div>
 
+
 <div class="yellow">
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
         <h2>DON'T MISS THE LATEST</h2>
-        <p>
-          It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
+        <p class="lead white-text">
+          Text about blog.
         </p>
         <div class="btns-wrapper">
-          <a href="/posts/" class="btn btn-solid"><span>CHECK OUT THE BLOG</span></a>
+          <%= link_to 'CHECK OUT THE BLOG', posts_path, :class=>"btn btn-solid"%>
         </div>
       </div>
     </div>
