--- a/app/views/pages/getcreative.html.erb
+++ b/app/views/pages/getcreative.html.erb
@@ -58,18 +58,20 @@
     <div class="flex page-canvas nowrap">
       <div class="flex-item-2col">
         <div class="twocol-left-text">
-          <h2>DON'T MISS OUT</h2>
-          <p class="lead">Subscribe to our monthly newsletter to hear about upcoming events, and the latest news from the school.</p>
-
+          <h2>BE A VOLUNTEER</h2>
+          <p class="lead white-text">Text about volunteering.</p>
+          <div class="btns-wrapper">
+            <%= link_to 'LEARN ABOUT VOLUNTEERING', volunteers_path, :class=>"btn btn-solid" %>
+          </div>
         </div>
       </div>
       <div class="shadow nonmobile">
-        <div class="flex-item-2col ourfocus_donate">
+        <div class="flex-item-2col be-a-volunteer">
         </div>
       </div>
     </div>
   </div>
   <div class="shadow mobile">
-    <div class="flex-item-2col ourfocus_donate">
+    <div class="flex-item-2col be-a-volunteer">
     </div>
   </div>
