--- a/app/views/pages/news-testimonials.html.erb
+++ b/app/views/pages/news-testimonials.html.erb
@@ -145,12 +145,12 @@
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>DON'T MISS THE LATEST</h2>
-        <p>
-          It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
+        <h2>BE A VOLUNTEER</h2>
+        <p class="lead white-text">
+          Copy about volunteering
         </p>
         <div class="btns-wrapper">
-          <%= link_to 'CHECK OUT THE BLOG', posts_path, :class=>"btn btn-secondary" %>
+          <%= link_to 'LEARN ABOUT VOLUNTEERING', posts_path, :class=>"btn btn-solid" %>
         </div>
       </div>
     </div>
