--- a/app/views/pages/ourfocus.html.erb
+++ b/app/views/pages/ourfocus.html.erb
@@ -101,11 +101,10 @@
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>OUR STORY</h2>
-        <p>It’s a long way from Detroit to Tanzania. Hear how our founder first saw the potential in a red
-          sweater, and see how far we’ve come since 2005.</p>
+        <h2>DON'T MISS THE LATEST</h2>
+        <p>Copy about blog.</p>
         <div class="btns-wrapper">
-          <a href="#" class="btn btn-solid"><span>READ TASIANA'S STORY</span></a>
+          <a href="#" class="btn btn-solid"><span>EXPLORE THE BLOG</span></a>
         </div>
       </div>
     </div>
