--- a/app/views/pages/redsweater.html.erb
+++ b/app/views/pages/redsweater.html.erb
@@ -65,12 +65,12 @@
     </div>
   </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col be-a-donor">
       </div>
     </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col ourfocus_donate">
+  <div class="flex-item-2col be-a-donor">
   </div>
 </div>
