--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,21 +20,21 @@
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>OUR FOCUS</h2>
-        <p>Quality education, gender equality and responsible innovation. Learn how our focus is making an impact in Mungere Village.</p>
+        <h2>BE A DONOR</h2>
+        <p class="lead white-text">Help us to get kids into red sweaters, and off to school. Every dollar makes a difference.</p>
         <div class="btns-wrapper">
-          <a href="/pages/ourfocus" class="btn btn-solid"><span>LEARN ABOUT OUR FOCUS</span></a>
+          <a href="/pages/ourfocus" class="btn btn-solid"><span>DONATE</span></a>
         </div>
       </div>
     </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col be-a-donor">
       </div>
     </div>
   </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col ourfocus_donate">
+  <div class="flex-item-2col be-a-donor">
   </div>
 </div>
