--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -114,12 +114,12 @@
           </div>
         </div>
         <div class="shadow nonmobile">
-          <div class="flex-item-2col ourfocus_donate">
+          <div class="flex-item-2col subscribe">
           </div>
         </div>
       </div>
     </div>
     <div class="shadow mobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col subscribe">
       </div>
     </div>
