--- a/app/assets/stylesheets/sass/3-layouts/_media-queries-desktop.scss
+++ b/app/assets/stylesheets/sass/3-layouts/_media-queries-desktop.scss
@@ -147,18 +147,18 @@
     margin: 10px 20px;
   }
 
-  .focus-items {
-    div {
-      opacity: 0;
-      position: relative;
-      transform: translateX(20px);
-      transition: all 0.7s ease-in-out;
-      &.is-showing {
-        opacity: 1;
-        transform: translateX(0px);
-      }
-    }
-  }
+  // .focus-items {
+  //   div {
+  //     opacity: 0;
+  //     position: relative;
+  //     transform: translateX(20px);
+  //     transition: all 0.7s ease-in-out;
+  //     &.is-showing {
+  //       opacity: 1;
+  //       transform: translateX(0px);
+  //     }
+  //   }
+  // }
 
   .flex-item-3col.space-around {
     height: 600px;
