--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -57,11 +57,11 @@
     <div class="flex-item-2col">
       <div class="twocol-left-text">
         <h2>DON'T MISS THE LATEST</h2>
-        <!-- <p>
-          It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
-        </p> -->
+        <p class="lead white-text">
+          Text about blog.
+        </p>
         <div class="btns-wrapper">
-          <%= link_to 'CHECK OUT THE BLOG', posts_path, :class=>"btn btn-secondary"%>
+          <%= link_to 'CHECK OUT THE BLOG', posts_path, :class=>"btn btn-solid"%>
         </div>
       </div>
     </div>
