--- a/app/views/pages/faq.html.erb
+++ b/app/views/pages/faq.html.erb
@@ -87,23 +87,23 @@
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>HOW DID RED SWEATER PROJECT BEGIN?</h2>
+        <h2>SPONSOR</h2>
         <p>
-          It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
+          Copy about sponsoring.
         </p>
         <div class="btns-wrapper">
-          <a href="/pages/ourstory" class="btn btn-secondary">LEARN HOW IT ALL BEGAN</a>
+          <a href="/pages/ourstory" class="btn btn-secondary">LEARN ABOUT SPONSORSHIPS</a>
         </div>
       </div>
     </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col sponsor">
       </div>
     </div>
   </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col ourfocus_donate">
+  <div class="flex-item-2col sponsor">
   </div>
 </div>
