--- a/app/views/pages/theteam.html.erb
+++ b/app/views/pages/theteam.html.erb
@@ -646,14 +646,14 @@
       </div>
     </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col ourstory">
       </div>
     </div>
   </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col ourfocus_donate">
+  <div class="flex-item-2col ourstory">
   </div>
 </div>
 
