--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -160,14 +160,14 @@
       </div>
     </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col ourfocus">
       </div>
     </div>
   </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col ourfocus_donate">
+  <div class="flex-item-2col ourfocus">
   </div>
 </div>
 
