--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -93,23 +93,23 @@
   <div class="flex page-canvas nowrap">
     <div class="flex-item-2col">
       <div class="twocol-left-text">
-        <h2>STORIES FROM STUDENTS AND STAFF</h2>
-        <p>
-          Explore true stories to learn more about our students, staff, and the work being done at the Mungere School.
+        <h2>WHY TANZANIA?</h2>
+        <p class="lead">
+          It’s a long way from Tanzania, East Africa, to Detroit. Hear how our founder, Ashley Holmer, first saw the potential in a red sweater. And explore our timeline to see how far we’ve come since 2005.
         </p>
         <div class="btns-wrapper">
-          <a href="#" class="btn btn-secondary">EXPLORE THE BLOG</a>
+          <a href="/pages/ourstory" class="btn btn-solid">LEARN HOW IT ALL BEGAN</a>
         </div>
       </div>
     </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col sponsor_bottom">
+      <div class="flex-item-2col ourstory">
       </div>
     </div>
   </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col sponsor_bottom">
+  <div class="flex-item-2col ourstory">
   </div>
 </div>
