--- a/app/views/volunteers/index.html.erb
+++ b/app/views/volunteers/index.html.erb
@@ -130,7 +130,7 @@
     <div class="flex-item-2col">
       <div class="twocol-left-text">
         <h2>BE A DONOR</h2>
-        <p class="lead">Help us to get kids into red sweaters, and off to school. Every dollar makes a difference.
+        <p class="lead white-text">Help us to get kids into red sweaters, and off to school. Every dollar makes a difference.
         </p>
         <div class="dropdown">
           <!-- <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -151,13 +151,13 @@
     </div>
   </div>
     <div class="shadow nonmobile">
-      <div class="flex-item-2col ourfocus_donate">
+      <div class="flex-item-2col be-a-donor">
       </div>
     </div>
   </div>
 </div>
 <div class="shadow mobile">
-  <div class="flex-item-2col ourfocus_donate">
+  <div class="flex-item-2col be-a-donor">
   </div>
 </div>
 
