Resize dropdown arrows on The Team page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1564,7 +1564,7 @@ form.donate-left {
     padding: 10px 0; }
     .flex-item-staff .title .name {
       width: 100%; }
-  .flex-item-staff img {
+  .flex-item-staff .staff-photo {
     display: inline;
     margin: 0 20px 0 0;
     width: 125px;
